[gd_scene load_steps=14 format=3 uid="uid://dxh4n4y6xmxy4"]

[ext_resource type="Script" uid="uid://8joslup2news" path="res://Niveles/level.gd" id="1_ej6nf"]
[ext_resource type="Script" uid="uid://dd2h55g6hqiai" path="res://Juego/game_controller.gd" id="2_qvom1"]
[ext_resource type="PackedScene" uid="uid://bfx3qc003jnmb" path="res://Juego/background_image.tscn" id="3_ej6nf"]
[ext_resource type="Texture2D" uid="uid://b53cx2hgkmicn" path="res://imgs/suelo/ground_06.png" id="4_spwk6"]
[ext_resource type="PackedScene" uid="uid://b0b1orvc1aqcr" path="res://Puntos/red_point.tscn" id="5_uwdme"]
[ext_resource type="PackedScene" uid="uid://br5ta3woshc35" path="res://Cajas/brown_box.tscn" id="6_onuao"]
[ext_resource type="PackedScene" uid="uid://cjrj2ff7xeoxh" path="res://Personajes/man_right.tscn" id="7_duoxp"]
[ext_resource type="Texture2D" uid="uid://dk8tvri3lfar3" path="res://imgs/decoracion/crate_06.png" id="8_nty5t"]
[ext_resource type="PackedScene" uid="uid://xvb5gkug6jdh" path="res://Juego/interfaz_juego.tscn" id="9_52v38"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_526vn"]
texture = ExtResource("4_spwk6")
0:0/size_in_atlas = Vector2i(4, 4)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ab6pk"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_526vn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iqur7"]
texture = ExtResource("8_nty5t")
0:0/size_in_atlas = Vector2i(4, 4)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_526vn"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_iqur7")

[node name="Level2" type="Node2D"]
script = ExtResource("1_ej6nf")

[node name="GameController" type="Node2D" parent="."]
script = ExtResource("2_qvom1")

[node name="Timer" type="Timer" parent="GameController"]
autostart = true

[node name="Background_image" parent="." instance=ExtResource("3_ej6nf")]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Floors" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Floors"]
tile_set = SubResource("TileSet_ab6pk")
format = 2
layer_0/tile_data = PackedInt32Array(458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524303, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 655376, 0, 0, 655375, 0, 0, 720910, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 720914, 0, 0, 786445, 0, 0, 655373, 0, 0, 589837, 0, 0, 720909, 0, 0, 720912, 0, 0, 720913, 0, 0, 720911, 0, 0, 589840, 0, 0, 524304, 0, 0, 458768, 0, 0)

[node name="Points" type="Node2D" parent="."]

[node name="point" parent="Points" instance=ExtResource("5_uwdme")]
position = Vector2(1120, 544)

[node name="point2" parent="Points" instance=ExtResource("5_uwdme")]
position = Vector2(1056, 672)

[node name="point3" parent="Points" instance=ExtResource("5_uwdme")]
position = Vector2(864, 480)

[node name="point4" parent="Points" instance=ExtResource("5_uwdme")]
position = Vector2(864, 608)

[node name="point5" parent="Points" instance=ExtResource("5_uwdme")]
position = Vector2(1184, 736)

[node name="point6" parent="Points" instance=ExtResource("5_uwdme")]
position = Vector2(1056, 800)

[node name="point7" parent="Points" instance=ExtResource("5_uwdme")]
position = Vector2(992, 736)

[node name="Boxes" type="Node2D" parent="."]

[node name="brown_box" parent="Boxes" instance=ExtResource("6_onuao")]
position = Vector2(1056, 480)

[node name="brown_box2" parent="Boxes" instance=ExtResource("6_onuao")]
position = Vector2(1056, 544)

[node name="brown_box3" parent="Boxes" instance=ExtResource("6_onuao")]
position = Vector2(1056, 608)

[node name="brown_box4" parent="Boxes" instance=ExtResource("6_onuao")]
position = Vector2(992, 736)

[node name="brown_box5" parent="Boxes" instance=ExtResource("6_onuao")]
position = Vector2(1056, 736)

[node name="brown_box6" parent="Boxes" instance=ExtResource("6_onuao")]
position = Vector2(1120, 736)

[node name="brown_box7" parent="Boxes" instance=ExtResource("6_onuao")]
position = Vector2(864, 736)

[node name="PJ" parent="." instance=ExtResource("7_duoxp")]
position = Vector2(928, 480)
espera = 0.4

[node name="Walls" type="Node2D" parent="."]

[node name="wall" type="TileMap" parent="Walls"]
tile_set = SubResource("TileSet_526vn")
format = 2
layer_0/tile_data = PackedInt32Array(393228, 1, 0, 458764, 1, 0, 524300, 1, 0, 589836, 1, 0, 655372, 1, 0, 720908, 1, 0, 786444, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 786451, 1, 0, 720915, 1, 0, 655379, 1, 0, 655378, 1, 0, 589842, 1, 0, 524306, 1, 0, 458770, 1, 0, 393234, 1, 0, 327698, 1, 0, 393229, 1, 0, 393230, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 524301, 1, 0, 524302, 1, 0, 589838, 1, 0, 655374, 1, 0, 589839, 1, 0)

[node name="interfaz" parent="." instance=ExtResource("9_52v38")]

[connection signal="time_updated" from="GameController" to="interfaz" method="_on_game_controller_time_updated"]
[connection signal="timeout" from="GameController/Timer" to="GameController" method="_on_timer_timeout"]
